- FEA#6685 support of url-success, url-fail and url-cancel configuration for Universign callbacks